--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             overflow: hidden;
             
         }
+        .main-container img {
+            max-width: 700px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+        }
 
         @media only screen and (max-width: 655px) {
             .header svg {
@@ -60,7 +65,7 @@
             padding: 20px;
         }
 
-        .header img {
+        .main-container img {
             max-width: 150px;
             margin-bottom: 50px;
             align-content: flex-end;
@@ -184,11 +189,12 @@
             <div class="connect-section">
                 <p>Connect with us</p> -->
                 <div class="social-icons">
-                  <a style="background-color: #ffffff;" href="https://www.instagram.com/stoxkartonline/" target="_blank"><img src="/assets/instagram.png" alt="App, instagram, logo, media, popular, social icon - Free download" class="d-block mx-auto"></a>
-                  <a style="background-color: #ffffff;" href="https://www.facebook.com/stoxkartonline" target="_blank"><img src="/assets/facebook.png" alt="Fb, facebook, facebook logo icon - Free download" class="d-block mx-auto"></a>
-                  <a style="background-color: #ffffff;" href="https://www.youtube.com/@StoxkartDaily" target="_blank"><img src="/assets/youtube.png" alt="App, logo, media, popular, social, youtube icon - Free download" class="d-block mx-auto"></a>
-                  <a style="background-color: #ffffff;" href="https://www.linkedin.com/company/stoxkart/" target="_blank"><img src="/assets/linkedin.png" alt="Linkedin icon - Free download on Iconfinder" class="d-block mx-auto"></a>
-                  <a style="background-color: #ffffff;" href="https://x.com/stoxkartonline" target="_blank"><img src="/assets/X.png" alt="X, twitter, elon musk, twitter new logo icon - Free download" class="d-block mx-auto"></a>
+                  <a style="background-color: #ffffff;" href="https://www.instagram.com/stoxkartonline/" target="_blank"><img src="assets/instagram.png" alt="App, instagram, logo, media, popular, social icon - Free download" class="d-block mx-auto"></a>
+                  <a style="background-color: #ffffff;" href="https://www.facebook.com/stoxkartonline" target="_blank"><img src="assets/facebook.png" alt="Fb, facebook, facebook logo icon - Free download" class="d-block mx-auto"></a>
+                  <a style="background-color: #ffffff;" href="https://www.youtube.com/@StoxkartDaily" target="_blank"><img src="assets/youtube.png" alt="App, logo, media, popular, social, youtube icon - Free download" class="d-block mx-auto"></a>
+                  <a style="background-color: #ffffff;" href="https://www.linkedin.com/company/stoxkart/" target="_blank"><img src="assets/linkedin.png" alt="Linkedin icon - Free download on Iconfinder" class="d-block mx-auto"></a>
+                  <a style="background-color: #ffffff;" href="https://x.com/stoxkartonline" target="_blank"><img src="assets/X.png" alt="X, twitter, elon musk, twitter new logo icon - Free download" class="d-block mx-auto"></a>
+                <a style="background-color: #ffffff;" href="https://www.stoxkart.com" target="_blank"><img src="assets/stoxkart.svg" alt="X, twitter, elon musk, twitter new logo icon - Free download" class="d-block mx-auto"></a>
                 </div>
               </div>
         </div>
