--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     
     <div class="main-container">
         <a href="https://www.stoxkart.com" target="_blank" style="text-decoration: none;">
-            <img src="/assets/Stoxkart-poster.png" alt="stoxkart-poster" >
+            <img src="assets/Stoxkart-poster.png" alt="stoxkart-poster" >
         </a>
         <div class="footer">
             <!-- <p>Explore these features on the Stoxkart app.</p>
