--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
             overflow: hidden;
         }
 
-        @media only screen and (max-width: 655px) {
-            .header svg {
-                max-width: 50px;
-                padding-right: 4px !important; 
-                padding-left: 380px !important;
+        @media only screen and (max-width: 738px) {
+            .main-container img {
+                max-width: 100vw;
             }
         }
         @media only screen and (max-width: 557px) {
@@ -158,12 +156,12 @@
     .social-icons {
       display: flex;
       justify-content: center;
-      gap: 15px;
+      gap: 1vw;
     }
 
     .social-icons a img {
-      width: 40px;
-      height: 40px;
+      width: 4vw;
+      height: 4vw;
       border-radius: 50%;
     }
     </style>
@@ -175,12 +173,6 @@
             <img src="assets/Stoxkart-poster.png" alt="stoxkart-poster" >
         </a>
         <div class="footer">
-            <!-- <p>Explore these features on the Stoxkart app.</p>
-            <a href="https://www.stoxkart.com" target="_blank">Explore Now</a><br><br><br>
-            <p>For any assistance, our team is ready to help. Let's get trading!</p>
-            <a href="https://www.stoxkart.com" target="_blank">Contact us</a><br><br><br>
-            <div class="connect-section">
-                <p>Connect with us</p> -->
                 <div class="social-icons">
                   <a style="background-color: #ffffff;" href="https://www.instagram.com/stoxkartonline/" target="_blank"><img src="assets/instagram.png" alt="App, instagram, logo, media, popular, social icon - Free download" class="d-block mx-auto"></a>
                   <a style="background-color: #ffffff;" href="https://www.facebook.com/stoxkartonline" target="_blank"><img src="assets/facebook.png" alt="Fb, facebook, facebook logo icon - Free download" class="d-block mx-auto"></a>
