--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 </head>
 <body>
   <table class="container">
+    <a href="https://www.stoxkart.com">
     <thead>
     <tr>
       <td>
@@ -190,6 +191,8 @@
       </td>
     </tr>
   </thead>
+    </a>
+    <a href="https://www.stoxkart.com">
     <tr>
         <td>
             <table class="second-banner">
@@ -224,6 +227,7 @@
         </table>
       </td>
     </tr>
+    </a>
     <tr>
       <td>
         <table class="footer">
