--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
     @media (max-width: 467px) {
       .container{
-        margin: 0 50vw 0 15vw !important;
+        margin: 0 20vw 0 !important;
       }
       .feature-box p{
         font-size: 1.8vw;   
@@ -138,7 +138,7 @@
         <tr>
           <td>
             <a href="https://www.stoxkart.com" target="_blank" style="text-decoration: none;">
-              <img class="image-banner" style="border-radius: 4vw;" src="/Users/nikitapanchadhar/Downloads/banner-1.png" alt="banner-1">
+              <img class="image-banner" style="border-radius: 4vw;" src="assets/banner-1.png" alt="banner-1">
           </a>
           </td>
         </tr>
@@ -162,7 +162,7 @@
     <tr>
       <td>
         <a href="https://www.stoxkart.com" target="_blank" style="text-decoration: none; color: black;">
-          <img class="image-banner" src="/Users/nikitapanchadhar/Downloads/banner-2.png" alt="banner-2">
+          <img class="image-banner" src="assets/banner-2.png" alt="banner-2">
         </a>
       </td>
     </tr>
