--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
               <p>Disclaimer:</p><p>Moneywise Finvest Ltd. Regd. Office (Stoxkart) : 11/6B Shanti Chamber, Pusa Road, New Delhi- 110005,|
                 SEBI Reg. No. INZ000196835 |Member Id:NSE:90161|BSE:6690|MCX:56325|MF Distributor ARN No.156808|
                 </p>
-                <img class="footer-logo" src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/stoxkart.svg" alt="Stoxkart Logo">
+                <img class="footer-logo" src="assets/stoxkart.svg" alt="Stoxkart Logo">
               <div class="social-icons">
-                <a href="https://www.youtube.com/@StoxkartDaily" target="_blank"><img src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/youtube.png" alt="Youtube"></a>
-                <a href="https://www.facebook.com/stoxkartonline" target="_blank"><img src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/stoxkartonline/" target="_blank"><img src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/instagram.png" alt="Instagram"></a>
-                <a href="https://www.linkedin.com/company/stoxkart/" target="_blank"><img src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/linkedin.png" alt="LinkedIn"></a>
-                <a href="https://x.com/stoxkartonli" target="_blank"><img src="/Users/nikitapanchadhar/Downloads/Stoxkart-email-campaign/assets/X.png" alt="Twitter"></a>
+                <a href="https://www.youtube.com/@StoxkartDaily" target="_blank"><img src="assets/youtube.png" alt="Youtube"></a>
+                <a href="https://www.facebook.com/stoxkartonline" target="_blank"><img src="assets/facebook.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/stoxkartonline/" target="_blank"><img src="assets/instagram.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com/company/stoxkart/" target="_blank"><img src="assets/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://x.com/stoxkartonli" target="_blank"><img src="assets/X.png" alt="Twitter"></a>
               </div>
             </td>
           </tr>
